--- a/LearnTodayAPI/appsettings.json
+++ b/LearnTodayAPI/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "LearnTodayDB": "Server=DHIVYA-PC\\SQLEXPRESS;Database=API_LearnToday;integrated security=true" }
 }
